# opencode-server-client

./: .gitignore  ARCHITECTURE_SSE_FIRST.md  CHANGELOG.md  Makefile  README.md  get-providers.sh  main.py  pyproject.toml
.github/workflows/: tests.yml
.legacy/mlflow_opencode/: README.md  __init__.py  client.py  config.py  experiment.py  io.py  samplers.py  session.py  streaming.py  types.py
.references/: api.sdk.js
openspec/: config.yaml
openspec/changes/async-api-and-events/: design.md  proposal.md  tasks.md
openspec/changes/http-client-foundation/: design.md  tasks.md
openspec/changes/sync-session-api/: design.md  proposal.md  tasks.md
openspec/specs/event-subscription-async/: spec.md
openspec/specs/event-subscription-sync/: spec.md
openspec/specs/opencode-client-sync/: spec.md
openspec/specs/prompt-submission-async/: spec.md
openspec/specs/prompt-submission-sync/: spec.md
openspec/specs/providers-async/: spec.md
src/opencode_server_client/: __init__.py  client_async.py  client_sync.py  config.py  exceptions.py  identifiers.py  types.py
tests/: integration_async.py  integration_sync_async_parity.py  test_config.py  test_event_parser.py  test_event_subscriber_async.py  test_event_subscriber_sync.py  test_exceptions.py  test_http_client_async.py  test_http_client_sync.py  test_opencode_client_async.py  test_opencode_client_sync.py  test_prompt_submitter_async.py  test_prompt_submitter_sync.py  test_provider_manager.py  test_provider_manager_async.py  test_session_manager_async.py  test_session_manager_sync.py  test_types.py
(+53 files in other folders)
